# datebox

./: README.md  package-lock.json
agent/: .env.example  .gitignore  ARCHITECTURE.md  EXAMPLES.md  README.md  SUMMARY.md  main.py  pyproject.toml
agent/src/: __init__.py  api.py  config.py  graph.py  tools.py  types.py  utils.py
apps/api/: .env.example  openapi.json  package.json  ts_errors.txt  ts_errors_utf8.txt  tsconfig.json
apps/api/src/: app.ts  server.ts  supabase-types-old.ts  supabase-types.ts
apps/api/src/modules/attempts/: handler.ts  service.ts
apps/api/src/modules/calendar/: service.ts
apps/api/src/services/: mentions.ts  storage.ts
apps/mobile/: app.json  package.json  tsconfig.json
apps/mobile/app/: _layout.tsx  albums.tsx  configuracion.tsx  familyGroup.tsx  group.tsx  historias.tsx  history.tsx  index.tsx  notifications.tsx  shop.tsx
apps/mobile/app/(tabs)/: _layout.tsx  calendar.tsx  dates.tsx  home.tsx  juegos.tsx  recuerdos.tsx
apps/mobile/app/onboarding/: interests.tsx
apps/mobile/components/: StreakCelebrationModal.tsx  StreakCounter.tsx
apps/mobile/components/Calendar/: ActivityForm.tsx  ActivityItem.tsx  CalendarCard.tsx
apps/mobile/components/Recuerdos/: BookCover.tsx  RecuerdoItemComponent.tsx
apps/mobile/components/navigation/: BottomTabBar.tsx  navigationConfig.ts
apps/mobile/components/shared/: AlbumCard.tsx  ExpandableFAB.tsx  LoadingProfile.tsx  LoadingUser.tsx
apps/mobile/components/tour/: TourTooltip.tsx
apps/mobile/context/: GroupContext.tsx
apps/mobile/hooks/: useActivitiesRealtime.ts  useAuth.tsx
apps/mobile/hooks/tours/: useGamesTour.ts
apps/mobile/styles/: base.ts
apps/mobile/widgets/: DailyActivitiesWidget.tsx  RecentPhotosWidget.tsx  widget-task-handler.tsx
supabase/migrations/: 20260406200000_init_datebox_schema.sql
web/: index.html
web/src/: theme.ts
web/src/components/: CTA.tsx  Features.tsx  Footer.tsx  Hero.tsx  LanguageSelector.tsx  Navbar.tsx
web/src/locales/: en.json  es.json
web/src/pages/: AccountDeletion.tsx  PrivacyPolicy.tsx
(+23 files in other folders)
